--- a/documentation.html
+++ b/documentation.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <h1>EMDB (Etta's Movie Database)</h1>
 
 <p>This is a REST API for an application called EMDB that stores data about different types of movies.</p>
